[package]
name = "shared"
version = "0.1.0"
authors = ["Jacherr <jwc2002@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
lazy_static = "1.4.0"
image = "0.23.14"
zip = "0.5.13"